--- a/LCTMoodle/Views/BinhLuan/_Khung.cshtml
+++ b/LCTMoodle/Views/BinhLuan/_Khung.cshtml
@@ -27,7 +27,7 @@
                 <li style="margin: 0; min-width: 34px; max-width: 34px;">
                     <article class="noi-dung">
                         <article class="input" style="border-left: 0;">
-                            <input type="file" name="name" value="" />
+                            <input type="file" name="TapTin" />
                         </article>
                     </article>
                 </li>
