--- a/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangNhap.cshtml
@@ -15,7 +15,7 @@
         Mạng xã hội học tập của mọi người
     </section>
     <section class="noi-dung">
-        <form class="lct-form" id="dang_nhap" action="/NguoiDung/XuLyKiemTraDangNhap" method="post">
+        <form class="lct-form" id="dang_nhap" action="/NguoiDung/XuLyDangNhap" method="post">
             <article>
                 <ul>
                     <li>
