--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -70,7 +70,7 @@
                     </section>
                     <section class="noi-dung">
                         <section class="input">
-                            <textarea data-validate="bat-buoc" name="name" data-input-type="editor" data-mac-dinh="Mặc định (editor)" placeholder="Hãy nhập"></textarea>
+                            <textarea data-validate="bat-buoc" name="name" data-mac-dinh="Mặc định (editor)" placeholder="Hãy nhập"></textarea>
                         </section>
                     </section>
                 </li>
