--- a/LCTMoodle/Views/BaiVietBaiTap/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiTap/_Item.cshtml
@@ -1,20 +1,20 @@
 ﻿@model DTOLayer.BaiVietBaiTapViewDTO
 
-<li data-doi-tuong="muc-bai-viet" class="muc-bai-viet" data-ma=@Model.ma>
+<li data-doi-tuong="muc-bai-viet" class="muc-bai-viet" data-ma="@Model.ma">
     <section class="khung-bai-viet">
         <section class="khung-thong-tin">
             <section class="trai">
                 <article class="hinh-dai-dien">
-                    <img src="#" />
+                    <img src="/boy.png/" />
                 </article>
             </section>
             <section class="phai">
                 <section class="nguoi-dung">
-                    <a href="#">Lê Bình Chiêu</a>
+                    <a href="#">@Model.nguoiTao.hoTen</a>
                 </section>
                 <section class="bai-viet">
-                    <section class="thoi-gian">
-                        @Model.thoiDiemTao
+                    <section class="thoi-gian">                        
+                        @Model.thoiDiemTao.Value.ToString("dd/M/yyyy HH:mm")
                     </section>
                 </section>
             </section>
@@ -53,36 +53,10 @@
             </button>
         </section>
     </section>
-    <section class="khung-nop-bai">
-        <section class="danh-sach-nop">
-            <a data-chuc-nang="xem-danh-sach-nop">
-                Bạn và 40 người khác đã nộp
-            </a>
-        </section>
-        <form data-doi-tuong="nop-bai-form" class="lct-form">
-            <input type="hidden" name="BaiVietBaiTap" value="@Model.ma" />
-            <ul style="flex-wrap: nowrap; padding: 5px 10px 10px;">
-                <li style="margin: 0; min-width: 32px; max-width: 32px;">
-                    <i data-chuc-nang="thay-doi-input" title="Nộp bằng đường dẫn" data-value="duong-dan" style="line-height: 32px; width: 32px; font-size: 20px; color: #888; cursor: pointer;" class="pe-7s-cloud"></i>
-                </li>
-                <li data-doi-tuong="tap-tin" style="width: 100%; margin: 0;">
-                    <section class="noi-dung">
-                        <article class="input">
-                            <input name="TapTin" data-validate="bat-buoc" type="file" />
-                        </article>
-                    </section>
-                </li>
-                <li data-doi-tuong="duong-dan" style="width: 100%; margin: 0; display: none;">
-                    <section class="noi-dung">
-                        <article class="input">
-                            <input disabled="disabled" name="DuongDan" data-validate="bat-buoc" type="text" placeholder="Nhập đường dẫn" />
-                        </article>
-                    </section>
-                </li>
-                <li style="min-width: 50px; max-width: 50px; margin: 0; margin-left: 4px;">
-                    <button style="padding: 0; margin: 0; width: 100%; height: 32px;" class="chap-nhan" type="submit">Nộp</button>
-                </li>
-            </ul>
-        </form>
+    <section data-doi-tuong="khung-nop-bai" class="khung-nop-bai">
+        @Html.Partial("~/Views/BaiTapNop/_Khung.cshtml", Model.danhSachBaiTapNop, new ViewDataDictionary()
+        {
+             { "MaBaiVietBaiTap", Model.ma }
+        })
     </section>
 </li>
