--- a/LCTMoodle/Views/HoiDap/XemCauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/XemCauHoi.cshtml
@@ -74,8 +74,8 @@
     <section class="noi-dung">
         <article class="hop-form">
             <section class="noi-dung">
-                
                 <form class="lct-form" id="tra_loi_cau_hoi">
+                    <input type="hidden" name="CauHoi" value="@ViewData["CauHoi"]" />
                     <article>
                         <ul>
                             <li>
