--- a/LCTMoodle/Views/HoiDap/TaoCauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/TaoCauHoi.cshtml
@@ -21,7 +21,7 @@
 <article class="hop hop-2-vien" >
     <section class="tieu-de">Thêm câu hỏi</section>
     <section class="noi-dung">
-        <form class="lct-form" id="tao_cau_hoi_form" action="/HoiDap/XuLyThem" method="POST">
+        <form class="lct-form" id="tao_cau_hoi_form" action="/HoiDap/XuLyThemCauHoi" method="POST">
             <article>
                 <ul>
                     <li>
