--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -184,7 +184,7 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input data-validate="bat-buoc" type="file" name="name" value="" />
+                            <input data-validate="bat-buoc" type="file" name="name" data-ma-mac-dinh="1" data-loai-mac-dinh="KhoaHoc_HinhDaiDien" />
                         </article>
                     </section>
                 </li>
