--- a/LCTMoodle/Content/styles/HoiDap/XemCauHoi.css
+++ b/LCTMoodle/Content/styles/HoiDap/XemCauHoi.css
@@ -102,6 +102,7 @@
         border-top: 1px solid #f5f5f5;
         background-color: #f8f8f8;
     }
+        /* Điểm */
         .tra-loi .thong-tin .diem {
             display: flex;
             flex-direction: column;
@@ -123,34 +124,16 @@
                 height: 20px;
                 line-height: 20px;
             }
-        .tra-loi .thong-tin .thong-tin-them {
-            text-align: left;
-            color: #bbb;
-            padding: 10px;
-        }
-            .tra-loi .thong-tin .thong-tin-them .thoi-gian {
-
-            }
-                .tra-loi .thong-tin .thong-tin-them .thoi-gian span {
-                    color: #333;
-                }
-            .tra-loi .thong-tin .thong-tin-them .nguoi-dang {
-
-            }
-                .tra-loi .thong-tin .thong-tin-them .nguoi-dang a {
-                    color: #333;
-                    font-weight: bold;
-                }
+        .tra-loi .thong-tin .tac-gia {
+            display:flex;
+            align-self: center;
+        }       
 
 /*#endregion */
 
-/*#region Custom */
+/*#region Form trả lời */
 
-.hop-1-vien:not(:first-child) {
-    margin-bottom: 10px;
-}
-
-.hop-form > .noi-dung {
+.form-tra-loi .noi-dung {
     width: 100%;
 }
 
